Vaihdettu Spotlessin säännöt: Google -> Eclipse